--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+
 <!DOCTYPE html>
-<html lang = "en">
+
+<html>
 <head>
-    <meta charset = "UTF-8">
-    <title>My First Page</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>My-First-Website</title>
+  <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-    <center>
-        <h1>Hello World</h1>
-    </center>
+
+<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+
+<!-- Change this code here by copy and pasting your template on line 15 -->
+<p>Hello World! I’m Arduino-05. This is my website!</p>
+
 </body>
 </html>
