--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src="https://octodex.github.com/images/pythocat.png" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Hello World! I’m Arduino-05. This is my website!<br>Python is <3</p>
+<p>Hello World! I’m Raunak. This is my website!<br>Python is <3</p>
 
 </body>
 </html>
