--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/pythocat.png" id="octocat" alt="octocat-gif" />
+<img src="https://octodex.github.com/images/grim-repo.jpg" id="octocat" alt="octocat-grim-reaper" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Hello World! I’m Raunak. This is my website!<br>Python is <3</p>
+<p>Roses are Red,<br>Violets are Blue<br><br> Unexpected '{'<br> on line 42.</p>
 
 </body>
 </html>
