--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>My-First-Website</title>
+  <title>JRaunak</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
