Added Custom octocat in the img tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/pythocat.png" id="octocat" alt="octocat-python" />
+<img src="MyOctocat.png" id="octocat" alt="Custom octocat" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Roses are Red,<br>Violets are Blue<br><br> Unexpected '{'<br> on line 42.</p>
